# archipel-file-carrier

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
cli/: Cargo.toml
cli/src/: main.rs
daemon/: 50-archipel-file-carrier.rules  Cargo.toml  archipel-fcd.service  archipelfc.service  user-archipel-fcd.service
daemon/src/: disks.rs  main.rs
file_carrier/: Cargo.toml
file_carrier/src/: error.rs  hierarchy.rs  init.rs  lib.rs  register.rs  unregister.rs
file_carrier/src/templates/: readme.txt
man/: hier.md
src/: connect.py  daemon.py  disconnect.py  error.rs  helpers.py  hier.py  hierarchy.rs  init.py  init.rs  main.py  main.rs  register.rs  unregister.rs
