[package]
name = "file-carrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_carrier = { path = "../file_carrier" }
clap = { version = "4.3.24", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
ud3tn-aap = { git = "https://github.com/EpicKiwi/rust-ud3tn.git", version = "1.0.0" }
