[package]
name = "file-carrier-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
file_carrier = { path = "../file_carrier" }
zbus = "3.14.1"
ud3tn-aap = { git = "https://github.com/EpicKiwi/rust-ud3tn.git", version = "0.2.2" }
