[package]
name = "file-carrier-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
file_carrier = { path = "../file_carrier" }
zbus = "5.7.0"
futures = "0.3.31"
ud3tn-aap = { git = "https://github.com/EpicKiwi/rust-ud3tn.git", version = "1.0.0" }
clap = { version = "4.5.38", features = ["derive"] }